--- a/panda.html
+++ b/panda.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap stylesheet  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <!-- <body>header start  -->
@@ -26,17 +27,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Shoes">Shose
+                        <a class="nav-link" href="#shoes">Shoes
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Backpack</a>
+                        <a class="nav-link" href="#backpack">Backpack</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Subscribe</a>
+                        <a class="nav-link" href="#subscribe">Subscribe</a>
                     </li>
                 </ul>
 
@@ -44,11 +45,11 @@
         </div>
     </nav>
     <!-- images slider -->
-    <section class="container">
+    <section class="container mt-5" id="home">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="row d-flex align-items-center p-5 bg-info bg-gradient ">
+                    <div class="row d-flex align-items-center p-5 panda-info-background bg-gradient ">
                         <div class="col-lg-7">
                             <h1>Cool Dude Headphone
                             </h1>
@@ -56,7 +57,7 @@
                                 of funky world.
                             </p>
                             <h1>$420</h1>
-                            <button class="btn btn-warning">Buy Know</button>
+                            <button class="btn btn-info-color">Buy Know</button>
 
                         </div>
                         <div class="col-lg-5">
@@ -66,7 +67,7 @@
 
                 </div>
                 <div class="carousel-item">
-                    <div class="row d-flex align-items-center p-5 bg-info bg-gradient ">
+                    <div class="row d-flex align-items-center p-5 panda-info-background bg-gradient ">
                         <div class="col-lg-7">
                             <h1>Mega LCD TV For Sports
                             </h1>
@@ -75,7 +76,7 @@
 
                             </p>
                             <h1>$1200</h1>
-                            <button class="btn btn-warning">Buy Know</button>
+                            <button class="btn btn-info-color">Buy Know</button>
 
                         </div>
                         <div class="col-lg-5">
@@ -84,7 +85,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="row d-flex align-items-center p-5 bg-info bg-gradient
+                    <div class="row d-flex align-items-center p-5 panda-info-background bg-gradient
                     ">
                         <div class="col-lg-7">
                             <h1>X-Box for your living room
@@ -95,7 +96,7 @@
 
                             </p>
                             <h1>$600</h1>
-                            <button class="btn btn-warning">Buy Know</button>
+                            <button class="btn btn-info-color">Buy Know</button>
 
                         </div>
                         <div class="col-lg-5">
@@ -119,7 +120,7 @@
 <!-- header end -->
 <main>
     <!-- categories  -->
-    <section class="container my-5">
+    <section class="container my-5 categories">
         <div class="row g-4">
             <div class="col-lg-4 col-12 col-md-6">
                 <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -128,7 +129,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-12 col-md-6">
-                <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                <div class="p-3 border color-info d-flex align-items-center justify-content-between rounded-3">
                     <h1 class="text-white">Bag</h1>
                     <img src="categories/bag.png" alt="">
                 </div>
@@ -143,7 +144,7 @@
     </section>
     <!-- categories end  -->
     <!-- shose blogs -->
-    <section class="container" id="Shoes">
+    <section class="container" id="shoes">
         <h2>Shoes</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -157,7 +158,7 @@
                         <h2>$120</h2>
                     </div>
                     <div class=" m-3">
-                        <button class="btn btn-warning">Buy Know</button>
+                        <button class="btn btn-info-color">Buy Know</button>
                     </div>
                 </div>
             </div>
@@ -171,7 +172,7 @@
                         <h2>$320</h2>
                     </div>
                     <div class="m-3">
-                        <button class="btn btn-warning">Buy Know</button>
+                        <button class="btn btn-info-color">Buy Know</button>
                     </div>
                 </div>
             </div>
@@ -186,14 +187,14 @@
                         <h2>$350</h2>
                     </div>
                     <div class="m-3">
-                        <button class="btn btn-warning">Buy Know</button>
+                        <button class="btn btn-info-color">Buy Know</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Backpack blogs -->
-    <section class="container my-5">
+    <section class="container my-5" id="backpack">
         <h2>Backpack</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -210,7 +211,7 @@
 
                     </div>
                     <div class=" m-3">
-                        <button class="btn btn-warning">Buy Know</button>
+                        <button class="btn btn-info-color">Buy Know</button>
                     </div>
                 </div>
             </div>
@@ -225,7 +226,7 @@
 
                     </div>
                     <div class="m-3">
-                        <button class="btn btn-warning">Buy Know</button>
+                        <button class="btn btn-info-color">Buy Know</button>
                     </div>
                 </div>
             </div>
@@ -244,21 +245,21 @@
 
                     </div>
                     <div class="m-3">
-                        <button class="btn btn-warning">Buy Know</button>
+                        <button class="btn btn-info-color">Buy Know</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Subscribe  -->
-    <section style="height: 300px;"
-        class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+    <section style="height: 300px;" id="subscribe "
+        class="container panda-info-background d-flex justify-content-center align-items-center rounded-3">
         <div>
             <h1>LET'S STAY IN TOUCH</h1>
             <p>Get updates on sales, specials and more</p>
-            <input type="text" placeholder="your email">
+            <input class="form-control" type="text" placeholder="Your Email">
             <br>
-            <button class="btn btn-warning">SUBMIT</button>
+            <button class="btn btn-info-color">SUBMIT</button>
         </div>
     </section>
 </main>
